--- a/app/src/main/res/layout/fragment_wallet_account.xml
+++ b/app/src/main/res/layout/fragment_wallet_account.xml
@@ -23,9 +23,8 @@
                     android:id="@+id/imageView2"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    android:background="@drawable/home_bg_gradient"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/bg" />
+                    android:src="@drawable/ic_bg" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -62,7 +61,7 @@
                             android:layout_alignParentStart="true"
                             android:layout_centerVertical="true"
                             android:layout_margin="@dimen/dimen_20dp"
-                            android:src="@drawable/user_account" />
+                            android:src="@drawable/ic_user" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -79,7 +78,7 @@
                                 android:ellipsize="end"
                                 android:maxLines="1"
                                 android:text="John kiwanuka"
-                                android:textColor="@color/colorPrimary"
+                                android:textColor="#3498DB"
                                 android:textSize="18sp"
                                 android:textStyle="bold" />
 
