Change in theme colors and  few icons

--- a/app/src/main/res/layout/wallet_add_money.xml
+++ b/app/src/main/res/layout/wallet_add_money.xml
@@ -208,6 +208,7 @@
                     android:background="@color/transparent"
                     android:backgroundTint="@color/textColor"
                     android:text="@string/deposit"
+                    android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textSize="@dimen/button_text_size" />
