--- a/app/src/main/res/layout/wallet_add_money_visa.xml
+++ b/app/src/main/res/layout/wallet_add_money_visa.xml
@@ -269,6 +269,7 @@
                     android:backgroundTint="@color/textColor"
                     android:text="@string/deposit"
                     android:textAllCaps="true"
+                    android:textStyle="bold"
                     android:textColor="@color/white"
                     android:textSize="@dimen/button_text_size" />
 
