--- a/app/src/main/res/layout/wallet_add_money_voucher.xml
+++ b/app/src/main/res/layout/wallet_add_money_voucher.xml
@@ -154,6 +154,7 @@
                     android:background="@color/transparent"
                     android:backgroundTint="@color/textColor"
                     android:text="@string/submit"
+                    android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textSize="@dimen/button_text_size" />
