--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#557f5f</color>
+    <color name="colorPrimary">#3498DB</color>
     <color name="colorPrimaryLight">#000</color>
     <color name="textColor">#515C6F</color>
-    <color name="buttonColor">#557f5f</color>
-    <color name="colorPrimaryDark">#557f5f</color>
-    <color name="colorAccent">#557f5f</color>
+    <color name="buttonColor">#3498DB</color>
+    <color name="colorPrimaryDark">#3498DB</color>
+    <color name="colorAccent">#3498DB</color>
     <color name="White">#ffffff</color>
     <color name="opaqueWhite">#8CFFFFFF</color>
     <color name="blackText">#444444</color>
