--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    app:layout_collapseMode="pin"
+    android:background="@color/colorPrimary"
     android:elevation="4dp"
     android:theme="@style/MyToolbar"
-    app:popupTheme="@style/MyToolbarPopUp"   >
+    app:layout_collapseMode="pin"
+    app:popupTheme="@style/MyToolbarPopUp">
 
 </androidx.appcompat.widget.Toolbar>
