Changes made in loan

--- a/app/src/main/res/drawable/ic_cashin.xml
+++ b/app/src/main/res/drawable/ic_cashin.xml
@@ -11,6 +11,6 @@
   <path
       android:pathData="M24.2495,11.7586l-9.0029,0.1528a0.424,0.424 89.0276,1 0,0.0144 0.8484L23.2402,12.6244L10.382,25.9266a0.424,0.424 89.0276,0 0,0.6104 0.5901l12.8575,-13.3015l0.1354,7.9778a0.424,0.424 89.0276,1 0,0.8484 -0.0144l-0.1528,-9.0029A0.424,0.424 89.0276,0 0,24.2495 11.7586Z"
       android:strokeWidth="0.5"
-      android:fillColor="#3498DB"
-      android:strokeColor="#3498DB"/>
+      android:fillColor="#2E84BE"
+      android:strokeColor="#2E84BE"/>
 </vector>
