--- a/app/src/main/res/drawable/ic_user.xml
+++ b/app/src/main/res/drawable/ic_user.xml
@@ -6,8 +6,8 @@
   <path
       android:pathData="M32.5,32.5m-32.5,0a32.5,32.5 0,1 1,65 0a32.5,32.5 0,1 1,-65 0"
       android:strokeAlpha="0.08"
-      android:fillColor="#3498DB"
-      android:fillAlpha="0.7"/>
+      android:fillColor="#2E84BE"
+      android:fillAlpha="0.9"/>
   <path
       android:pathData="M33.174,47.097c-0.052,0 -0.1,0.052 -0.206,0.052 -0.052,0 -0.1,-0.052 -0.206,-0.052Z"
       android:fillColor="#e6e9ee"/>
