linked loan preview and updating icons for id, personal, employment and business info

--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -5,7 +5,7 @@
         <shape>
             <gradient
                 android:startColor="@color/colorPrimary"
-                android:centerColor="#67A376"
+                android:centerColor="@color/colorAccentBlue"
                 android:endColor="@color/colorPrimary"
                 android:angle="90"
                 />
