--- a/app/src/main/res/layout/loan_preview.xml
+++ b/app/src/main/res/layout/loan_preview.xml
@@ -22,13 +22,22 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/appbar"
+        android:layout_marginTop="-70dp"
+        android:elevation="5dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/layout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/appbar"
-        android:layout_marginTop="-70dp"
+
         android:layout_marginStart="@dimen/dimen_20dp"
         android:layout_marginEnd="20dp"
         android:padding="5dp"
@@ -67,7 +76,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/total_balance"
+                android:id="@+id/text_view_loan_status_preview_amount"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -149,6 +158,7 @@
                     android:gravity="end"/>
 
                 <TextView
+                    android:id="@+id/text_view_loan_status_preview_interest_rate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -194,6 +204,7 @@
             android:textStyle="bold"/>
 
         <TextView
+            android:id="@+id/text_view_loan_status_preview_due_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -358,6 +369,7 @@
                         android:textStyle="bold"
                         android:textSize="12sp"/>
                     <TextView
+                        android:id="@+id/text_view_loan_status_preview_duration"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
@@ -406,6 +418,7 @@
                         android:textStyle="bold"
                         android:textSize="12sp"/>
                     <TextView
+                        android:id="@+id/text_view_loan_status_preview_status"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
@@ -462,6 +475,7 @@
                         android:textStyle="bold"
                         android:textSize="12sp"/>
                     <TextView
+                        android:id="@+id/text_view_loan_status_preview_date"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
@@ -504,12 +518,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
-                        android:text="Approved On"
+                        android:text="Due Date"
                         android:layout_marginBottom="5dp"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:textSize="12sp"/>
                     <TextView
+                       android:id="@+id/text_view_loan_status_preview_due_date"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
@@ -669,6 +684,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:id="@+id/image_view_loan_status_preview_user_photo"
                 android:layout_width="180dp"
                 android:layout_height="120dp"
                 android:scaleType="centerCrop"
@@ -696,6 +712,7 @@
                 android:textStyle="bold"/>
 
             <ImageView
+                android:id="@+id/image_view_loan_status_preview_farm_photo"
                 android:layout_width="180dp"
                 android:layout_height="120dp"
                 android:scaleType="centerCrop"
@@ -734,4 +751,6 @@
             android:textStyle="bold" />
 
     </LinearLayout>
+    </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
