--- a/app/src/main/res/layout/loan_preview.xml
+++ b/app/src/main/res/layout/loan_preview.xml
@@ -23,7 +23,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/appbar"
         android:layout_marginTop="-70dp"
